--- a/RiftStatistics/src/main/resources/webapp/riftstatistics/web/styles.css
+++ b/RiftStatistics/src/main/resources/webapp/riftstatistics/web/styles.css
@@ -8,7 +8,7 @@
     font-weight: 500;
     font-size: 16px;
     text-decoration: none;
-    color: #C0C2CB;
+    color: #FFFFFF;
 }
 
 body {
@@ -17,13 +17,14 @@ body {
 
 header{
     display: flex;
+    overflow: auto;
     justify-content: flex-end;
     align-items: center;
     padding: 10px 10%;
 }
 
 .header_object{
-    background-color: #303446;
+    background-image: linear-gradient(313deg, #ab318f 0%, #ab318f 25%,#ec2c78 50%, #f0555f 75%, #f16754 100%);
 }
 
 
@@ -33,7 +34,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #303446;
+    background-color: transparent;
 }
 
 .accountArea {
@@ -41,29 +42,49 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #303446;
+    background-color: transparent;
 }
 
+.logo img,
 .logo{
     cursor: pointer;
     margin-right: auto;
+    background: transparent;
+    transition: all 0.3s ease 0s;
+}
+
+.logo:hover{
+    transform: scale(1.025);
+    transition: all 0.3s ease 0s;
 }
 
 .nav_buttons{
     list-style: none;
+    background: transparent;
 }
 
 .nav_buttons li{
     display: inline-block;
-    margin: 0 5px;
+    margin: 5px 5px 0 5px;
+    background: transparent;
 }
 
 .nav_buttons li a{
     transition: all 0.3s ease 0s;
+    background: transparent;
 }
-.nav_buttons li a svg:hover, .nav_buttons li a:hover svg {
-    fill: #BAB9B9;
+
+.nav_buttons li a svg{
+    background: transparent;
     transition: all 0.3s ease 0s;
+    transform: scale(1);
+}
+
+.nav_buttons li a svg:hover,
+.nav_buttons li a:hover svg {
+    transition: all 0.3s ease 0s;
+    background: rgba(0, 0, 0, 0.1);
+    transform: scale(1.15);
 }
 
 .searchField{
@@ -75,35 +96,41 @@ header{
     height: 40px;
     width: 350px;
     border-radius: 20px;
-    border-color: #7484ff;
-    background-color: #3a4051;
-    color: #C0C2CB;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 0.25);
+    color: #FFFFFF;
     overflow: hidden;
     outline: none;
+    transition: all 0.3s ease 0s;
 }
 
+.searchField:focus,
 .searchField:hover{
+    background-color: rgba(0, 0, 0, 0.35);
     border-radius: 10px;
-    border-color: #7484ff;
-    background-color: #42485a;
-    color: #cbcdd7;
+    transform: scale(1.01);
     transition: all 0.3s ease 0s;
 }
 
 .accountButton {
     transition: all 0.3s ease 0s;
-    border-color: #7484ff;
+    color: rgba(255, 255, 255, 1);
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 0.15);
     cursor: pointer;
     padding: 10px;
     margin: 0 10px;
     overflow: hidden;
     border-radius: 20px;
-    background-color: #303446;
+    outline: none;
 }
 
 .accountButton:hover {
-    background-color: #3a4051;
+    background-color: rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+    transform: scale(1.05   );
     transition: all 0.3s ease 0s;
 }
 
@@ -113,7 +140,7 @@ header{
     left: 50%;
     width: 380px;
     padding: 20px 30px;
-    background-color: #FFFFFF;
+    background-image: linear-gradient(43deg, #ab318f 0%, #ab318f 33%,#ec2c78 66%, #f0555f 100%);
     box-shadow: 2px 5px rgba(0,0,0,0.15);
     font-family: "Raleway", sans-serif;
     border-radius: 10px;
@@ -123,28 +150,20 @@ header{
 }
 
 .popup.active {
-    position: absolute;
     top: 50%;
-    left: 50%;
-    width: 380px;
-    padding: 20px 30px;
-    background-color: #FFFFFF;
-    box-shadow: 2px 5px rgba(0,0,0,0.15);
-    font-family: "Raleway", sans-serif;
-    border-radius: 10px;
     transform: translate(-50%, -50%) scale(1);
     transition: top 0ms ease-in-out 0ms,
     transform 200ms ease-in-out 0ms;
 }
 
 .popupSign {
+    outline: none;
     position: absolute;
     top: -150%;
     left: 50%;
     width: 380px;
     padding: 30px 30px;
-    background-color: #FFFFFF;
-    box-shadow: 2px 5px rgba(0,0,0,0.15);
+    background-image: linear-gradient(43deg, #ab318f 0%, #ab318f 33%,#ec2c78 66%, #f0555f 100%);
     font-family: "Raleway", sans-serif;
     border-radius: 10px;
     transform: translate(-50%, -50%) scale(0.1);
@@ -153,15 +172,8 @@ header{
 }
 
 .popupSign.active {
-    position: absolute;
+    outline: none;
     top: 50%;
-    left: 50%;
-    width: 380px;
-    padding: 20px 30px;
-    background-color: #FFFFFF;
-    box-shadow: 2px 5px rgba(0,0,0,0.15);
-    font-family: "Raleway", sans-serif;
-    border-radius: 10px;
     transform: translate(-50%, -50%) scale(1);
     transition: top 0ms ease-in-out 0ms,
     transform 200ms ease-in-out 0ms;
@@ -170,36 +182,55 @@ header{
 
 .popupSign .close-btn,
 .popup .close-btn {
+    outline: none;
     position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 15px;
-    height: 15px;
-    background: #888;
+    top: 5%;
+    right: 5%;
+    width: 20px;
+    height: 20px;
+    background: rgba(0, 0, 0, 0.2);
     color: #eee;
     text-align: center;
-    line-height: 15px;
+    text-decoration: none;
+    line-height: 20px;
+    font-size: 20px;
     border-radius: 15px;
     cursor: pointer;
+    transform: translate(0px, 0px);
+    transition: all 0.3s ease 0s;
+}
+
+.popupSign .close-btn:hover,
+.popup .close-btn:hover {
+    outline: none;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    background: rgba(0, 0, 0, 0.4);
+    transform: translate(0px, 0px);
+    transition: all 0.3s ease 0s;
 }
 
 .popupSign .form h2,
 .popup .form h2 {
+    outline: none;
     text-align: center;
-    color: #222;
+    color: #FFFFFF;
     margin: 10px 0 20px;
     font-size: 25px;
 }
 
 .popupSign .form .form_element,
 .popup .form .form_element {
-    margin: 15px 0;
+    outline: none;
+    margin: 15px auto;
 }
 
 .popupSign .form .form_element label,
 .popup .form .form_element label {
+    outline: none;
     font-size: 14px;
-    color: #222;
+    color: #FFFFFF;
 }
 
 
@@ -208,16 +239,38 @@ header{
 .popupSign .form .form_element input[type="email"],
 .popup .form .form_element input[type="text"],
 .popup .form .form_element input[type="password"] {
+    outline: none;
     margin-top: 5px;
     display:block;
     width: 100%;
     padding: 10px;
     outline: none;
-    border: 1px solid #aaa;
-    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.25);
+    color: #C0C2CB;
+    border: 3px solid #000000;
+    border-radius: 20px;
+    transition: all 0.3s ease 0s;
+}
+
+.popupSign .form .form_element input[type="text"]:hover,
+.popupSign .form .form_element input[type="password"]:hover,
+.popupSign .form .form_element input[type="email"]:hover,
+.popup .form .form_element input[type="text"]:hover,
+.popup .form .form_element input[type="password"]:hover,
+.popupSign .form .form_element input[type="text"]:focus,
+.popupSign .form .form_element input[type="password"]:focus,
+.popupSign .form .form_element input[type="email"]:focus,
+.popup .form .form_element input[type="text"]:focus,
+.popup .form .form_element input[type="password"]:focus {
+    outline: none;
+    border-color: black;
+    background-color: rgba(0, 0, 0, 0.35);
+    border-radius: 10px;
+    transition: all 0.3s ease 0s;
 }
 
 .popup .form .form_element input[type="checkbox"] {
+    outline: none;
     margin-right: 5px;
 }
 
@@ -227,7 +280,10 @@ header{
     margin: auto;
     width: 100%;
     height: 40px;
-    border-color: #7484ff;
+    color: rgba(255, 255, 255, 1);
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 0.35);
     padding: 10px;
     outline: none;
     font-size: 15px;
@@ -235,12 +291,13 @@ header{
     color: #f5f5f5;
     cursor: pointer;
     border-radius: 20px;
-    background-color: #303446;
 }
 
 .popupSign .form .form_element button:hover,
 .popup .form .form_element button:hover {
-    background-color: #3a4051;
+    outline: none;
+    background-color: rgba(0, 0, 0, 0.45);
     border-radius: 10px;
+    transform: scale(1.1);
     transition: all 0.3s ease 0s;
 }
